--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	        </div>-->
       </div>
     </div>
-    <div class="vl"></div>
 
      <div class="hero-image">
        <div class="hero-txt">
@@ -31,8 +30,9 @@
            <p>A Personal Website Portfolio</p>
        </div>
      </div>
-    <div class="box">
-      <div id = "experience" class = "left-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
+     <div class="vl"></div>
+    <div class="content">
+      <div id = "experience" class = "left content-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
         <h3 class = "box-title">Education<hr></h3>
         <p style="text-indent: 40px" class = "box-txt" id = "experience-txt">
           I am currently a Senior at the University of Minnesota, majoring in Computer Science in the College of Science and Engineering with a minor in Statistics. I decided to focus my upper division courses on <b>data-driven computing</b>, which focuses on disciplines such as data science, big data, and GIS.
@@ -42,21 +42,21 @@
         </p>
       </div>
 
-      <div id = "aboutMe" class = "right-box" data-aos="fade-up-left" data-aos-duration="2000" data-aos-once="true">
+      <div id = "aboutMe" class = "right content-box" data-aos="fade-up-left" data-aos-duration="2000" data-aos-once="true">
         <h3 class = "box-title">About Me<hr></h3>
         <p style="text-indent: 40px" class = "box-txt" id = "aboutMe-txt">
-          I was born and raised in Chicago, Illinois. I first began trying to code when I was 14 years old. However, I had difficulty learning on my own and my high school did not have the resources to provide programming courses. I had a hard time deciding what to major in, but I decided to try CS in the hopes that I would thrive in a classroom environment that I was never had access to before. </p>
+          I was born and raised in Chicago, Illinois. I first began trying to code when I was 14 years old. However, I had difficulty learning on my own and my high school did not have the resources to provide programming courses. I had a hard time deciding what to major in, but I decided to try CS in the hopes that I would thrive in a classroom environment that I never had access to before. </p>
           <p style="text-indent: 40px" class = "box-txt">Since then, I've studied Computer Science almost exclusively since Spring Semester of my Sophomore year, beginning my minor around the same time. I've now began to focus on studying databases and learning how industries across the spectrum work with large sets of data available to them to inform business decisions.</p>
       </div>
 
-      <div id = "purpose" class = "left-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
+      <div id = "purpose" class = "left content-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
         <h3 class = "box-title">Purpose<hr></h3>
         <p style="text-indent: 40px" class = "box-txt" id = "purpose-txt">
 	         The purpose of this webpage is to understand the fundamentals of web development, which I do not have much experience in.So I decided to develop this website with no assistance from front-end frameworks in order to better understand the fundamentals of HTML, CSS, and a little JavaScript.
         </p>
       </div>
 
-      <div id = "projects" class = "right-box" data-aos="fade-up-left" data-aos-duration="2000" data-aos-once="true">
+      <div id = "projects" class = "right content-box" data-aos="fade-up-left" data-aos-duration="2000" data-aos-once="true">
         <h3 class = "box-title">Other Projects<hr></h3>
         <p class = "box-txt" id="projects-txt">
           <b>Spotitheta:</b> Using Spotify's Web API along with Node.js and Express frameworks, calculate a "genre vector" for the user based off their recent listening history, and let them directly see how similar their recent music taste is to any other user that has used the app via <a id = "cos-link" href = "https://stackoverflow.com/questions/1746501/can-someone-give-an-example-of-cosine-similarity-in-a-very-simple-graphical-wa" target="_blank">cosine similarity</a>, essentially finding the angle between two user genre vectors to determine how similar they are.
@@ -67,20 +67,16 @@
         <p class = "box-txt">
           <b>Transit System Simulator:</b> A simple transit simulator and visualizer, developed over a semester to be able to determine the most efficient scheduling for UMN campus shuttles. Project was developed in C++ and main goals were to become acclimated to a large-scale software development process through all stages and learn good documentation practices.
         </p>
-
       </div>
-
-      <div id = "footer">
-        <ul>
-          <li><a href="https://github.com/jmfay">Github</a></li>
-          <li><a href="https://linkedin.com/in/jmfay">LinkedIn</a></li>
-          <li><a href="https://docs.google.com/document/d/1Md9SWOVezbdVggKiQ45nZL-03Rby_s9RUP8EuZuGmUo/edit?usp=sharing" target = "_blank">Resume</a></li>
-          <li><a href="mailto:fayxx092@umn.edu">fayxx092@umn.edu</a></li>
-        </ul>
-      </div>
-
-
-      
+    </div>  
+    <div id = "footer">
+      <ul>
+        <li><a href="https://github.com/jmfay">Github</a></li>
+        <li><a href="https://linkedin.com/in/jmfay">LinkedIn</a></li>
+        <li><a href="https://docs.google.com/document/d/1Md9SWOVezbdVggKiQ45nZL-03Rby_s9RUP8EuZuGmUo/edit?usp=sharing" target = "_blank">Resume</a></li>
+        <li><a href="mailto:fayxx092@umn.edu">fayxx092@umn.edu</a></li>
+      </ul>
+    </div>
     <!--<script>
       function dropMenu() {
       document.getElementById("myDropdown").classList.toggle("show");
