--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Joseph Fay: Personal Website Portfolio</title>
+  <title>Joseph Fay: Personal Website Resume</title>
   <link rel="stylesheet" type = "text/css" href ="css/stylesheet.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
@@ -26,27 +26,32 @@
 
      <div class="hero-image">
        <div class="hero-txt">
-           <h1>Joseph Fay</h1>
-           <p>A Personal Website Portfolio</p>
+           <h1 id = "hero-name">Joseph Fay</h1>
+           <p id = "hero-title">A Personal Website Resume</p>
        </div>
+       <a id = "file-button" href="https://docs.google.com/document/d/1Md9SWOVezbdVggKiQ45nZL-03Rby_s9RUP8EuZuGmUo/edit?usp=sharing" target="_blank" class="far fa-file-alt fa-5x center" data-aos="fade-up" data-aos-delay="3000"
+     data-aos-duration="1000"></a>
      </div>
+     
      <div class="vl"></div>
+     <div class = "vl2"></div>
     <div class="content">
-      <div id = "experience" class = "left content-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
+
+      <div id = "aboutMe" class = "left content-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
+        <h3 class = "box-title">About Me<hr></h3>
+        <p style="text-indent: 40px" class = "box-txt" id = "aboutMe-txt">
+          I was born and raised in Chicago, Illinois. I first began trying to code when I was 14 years old. However, I had difficulty learning on my own and my high school did not have the resources to provide programming courses. I had a hard time deciding what to major in, but I decided to try CS in the hopes that I would thrive in a classroom environment that I never had access to before. </p>
+          <p style="text-indent: 40px" class = "box-txt">Since then, I've studied Computer Science almost exclusively since Spring Semester of my Sophomore year, beginning my minor around the same time. I've now began to focus on studying databases and learning how industries across the spectrum work with large sets of data available to them to inform business decisions.</p>
+      </div>
+
+      <div id = "education" class = "right content-box" data-aos="fade-up-left" data-aos-duration="2000" data-aos-once="true">
         <h3 class = "box-title">Education<hr></h3>
-        <p style="text-indent: 40px" class = "box-txt" id = "experience-txt">
+        <p style="text-indent: 40px" class = "box-txt" id = "education-txt">
           I am currently a Senior at the University of Minnesota, majoring in Computer Science in the College of Science and Engineering with a minor in Statistics. I decided to focus my upper division courses on <b>data-driven computing</b>, which focuses on disciplines such as data science, big data, and GIS.
         </p>
         <p style="text-indent: 40px">
           I have worked with many languages in class so far, gaining experience in relational databases using mySQL, object-oriented programming in Python/Java/C++, to low level programming in C. For my stats minor, I have used R and Python in statistical computing classes to develop statistical models, including time series analysis, multiple linear regression, and using statistical inference to inform real-world decisions.
         </p>
-      </div>
-
-      <div id = "aboutMe" class = "right content-box" data-aos="fade-up-left" data-aos-duration="2000" data-aos-once="true">
-        <h3 class = "box-title">About Me<hr></h3>
-        <p style="text-indent: 40px" class = "box-txt" id = "aboutMe-txt">
-          I was born and raised in Chicago, Illinois. I first began trying to code when I was 14 years old. However, I had difficulty learning on my own and my high school did not have the resources to provide programming courses. I had a hard time deciding what to major in, but I decided to try CS in the hopes that I would thrive in a classroom environment that I never had access to before. </p>
-          <p style="text-indent: 40px" class = "box-txt">Since then, I've studied Computer Science almost exclusively since Spring Semester of my Sophomore year, beginning my minor around the same time. I've now began to focus on studying databases and learning how industries across the spectrum work with large sets of data available to them to inform business decisions.</p>
       </div>
 
       <div id = "purpose" class = "left content-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
