--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
           I am currently a Senior at the University of Minnesota, majoring in Computer Science in the College of Science and Engineering with a minor in Statistics. I decided to focus my upper division courses on <b>data-driven computing</b>, which focuses on disciplines such as data science, big data, and GIS.
         </p>
         <p style="text-indent: 40px">
-          I have worked with many languages in class so far, gaining experience in relational databases using mySQL, object-oriented programming in Python/Java/C++, to low level programming in C. For my stats minor, I have used R and Python in statistical computing classes to develop statistical models, including time series analysis, multiple linear regression, and using statistical inference to inform real-world decisions.
+          I have worked with many languages in class so far, gaining experience in relational databases using mySQL, object-oriented programming in Python/Java/C++, to low level programming in C. For my stats minor, I have used Python and R in statistical computing classes to develop statistical models, including time series analysis, multiple linear regression, and using statistical inference to inform real-world decisions.
         </p>
       </div>
 
       <div id = "purpose" class = "left content-box" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
         <h3 class = "box-title">Purpose<hr></h3>
         <p style="text-indent: 40px" class = "box-txt" id = "purpose-txt">
-	         The purpose of this webpage is to understand the fundamentals of web development, which I do not have much experience in.So I decided to develop this website with no assistance from front-end frameworks in order to better understand the fundamentals of HTML, CSS, and a little JavaScript.
+	         The purpose of this webpage is to better understand the fundamentals of web design. So I decided to design this website with no assistance from front-end frameworks in order to better understand how HTML, CSS, and a little JavaScript can come together to bring the user experiences we engage with every day.
         </p>
       </div>
 
