Updated resume URL, styling of text boxes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<head>
-  <title>Joseph Fay: Personal Website Resume</title>
-  <link rel="stylesheet" type = "text/css" href ="css/stylesheet.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-</head>
+<html lang = "en">
+  <head>
+    <title>Joseph Fay: Personal Website Resume</title>
+    <meta charset = "utf-8">
+    <link rel="stylesheet" type = "text/css" href ="css/stylesheet.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+  </head>
 
-<html>
   <body>
 
 
@@ -21,7 +22,6 @@
 	           <a href="visualizer.html">Projects</a>
 	           <a href="contact.html">Contact/Resume</a>
 	        </div>-->
-      </div>
     </div>
 
      <div class="hero-image">
@@ -29,7 +29,7 @@
            <h1 id = "hero-name">Joseph Fay</h1>
            <p id = "hero-title">A Personal Website Resume</p>
        </div>
-       <a id = "file-button" href="https://docs.google.com/document/d/1Md9SWOVezbdVggKiQ45nZL-03Rby_s9RUP8EuZuGmUo/edit?usp=sharing" target="_blank" class="far fa-file-alt fa-5x center" data-aos="fade-up" data-aos-delay="3000"
+       <a id = "file-button" href="https://drive.google.com/file/d/1pP6s3RvHj7NwfebdsMuSk4vUzCAWm2Ok/view?usp=sharing" target="_blank" class="far fa-file-alt fa-5x center" data-aos="fade-up" data-aos-delay="3000"
      data-aos-duration="1000"></a>
      </div>
      
